kirin970-common: set AOD default value to disabled
Change-Id: If64166b08ed4065787fc67aca1fc6cb54c565159

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -248,6 +248,9 @@
     <!-- Whether the display blanks itself when transition from a doze to a non-doze state -->
     <bool name="config_displayBlanksAfterDoze">true</bool>
 
+    <!-- Set AOD off by default -->
+    <bool name="config_dozeAlwaysOnEnabled">false</bool>
+
     <!-- Whether device has super charging support -->
     <bool name="config_hasSuperCharger">true</bool>
 
